Fixed the navbar according to website alignment.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -698,8 +698,11 @@ p {
 }
 
 .navbar-nav .nav-item {
-  margin-right: 45px;
-  position: relative;
+  margin-right: 50px;
+  padding-right: 60px;
+  justify-content: center;
+  align-items: center;
+  
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
